--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,18 +26,24 @@ dependencies:
   # ✅ Facebook login
   flutter_facebook_auth: ^7.1.0
 
-  # Secure storage
+  # ✅ Secure storage
   flutter_secure_storage: ^9.2.2
+
+  # ✅ Shared Preferences
+  shared_preferences: ^2.3.2
+
+  # ✅ Cloud Firestore
+  cloud_firestore: ^5.4.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0   # <-- latest compatible with Dart 3.5
+  flutter_lints: ^4.0.0   # Compatible with Dart 3.5
 
 flutter:
   uses-material-design: true
 
   assets:
+    - assets/background/
+    - assets/farmer/
     - assets/images/
-
-
