--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,10 +12,10 @@ dependencies:
     sdk: flutter
 
   # ✅ Firebase core (latest stable)
-  firebase_core: ^3.6.0
+  firebase_core: ^3.15.2
 
   # ✅ Firebase authentication
-  firebase_auth: ^5.3.1
+  firebase_auth: ^5.7.0
 
   # ✅ Google Sign-In
   google_sign_in: ^6.2.1
@@ -33,18 +33,22 @@ dependencies:
   shared_preferences: ^2.3.2
 
   # ✅ Cloud Firestore
-  cloud_firestore: ^5.4.4
+  cloud_firestore: ^5.6.12
 
   # ✅ Intl (date formatting, numbers, etc.)
   intl: ^0.19.0
 
-  # Cupertino icons
+  # ✅ Cupertino icons
   cupertino_icons: ^1.0.8
+
+  # ✅ HTTP requests
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0   # Compatible with Dart 3.5
+  flutter_lints: ^4.0.0
+  flutter_launcher_icons: ^0.14.4
 
 flutter:
   uses-material-design: true
@@ -54,3 +58,13 @@ flutter:
     - assets/farmer/
     - assets/images/
     - assets/Crops/
+    - assets/Icon/
+    - assets/icon/weather.png
+    - assets/icon/Market.png
+    - assets/icon/Soil.png
+
+# ✅ Launcher icon setup
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/Icon/logo.png"
