--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,8 +44,11 @@ dependencies:
   # ✅ HTTP requests
   http: ^1.2.2
 
-  # ✅ File picker (moved to dependencies)
+  # ✅ File picker
   file_picker: ^10.3.2
+
+  # ✅ OTP input fields
+  pin_code_fields: ^8.0.1
 
 dev_dependencies:
   flutter_test:
