--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
 
   # ✅ File picker
   file_picker: ^10.3.2
+  
+  # ✅ Image picker
+  image_picker: ^1.1.2
 
   # ✅ OTP input fields
   pin_code_fields: ^8.0.1
