firebase new change

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # ✅ Cloud Firestore
   cloud_firestore: ^5.6.12
 
+  # ✅ Firebase Realtime Database
+  firebase_database: ^11.1.0
+
   # ✅ Intl (date formatting, numbers, etc.)
   intl: ^0.19.0
 
@@ -48,10 +51,12 @@ dependencies:
   file_picker: ^10.3.2
   
   # ✅ Image picker
-  image_picker: ^1.1.2
+  image_picker: ^1.2.0
 
   # ✅ OTP input fields
   pin_code_fields: ^8.0.1
+  google_generative_ai: ^0.4.7
+  google_mlkit_image_labeling: ^0.14.1
 
 dev_dependencies:
   flutter_test:
